--- a/popup/popup_extension_firefox.html
+++ b/popup/popup_extension_firefox.html
@@ -8,6 +8,9 @@
         <link rel="stylesheet" href="popup_extension_firefox.css">
     </head>
     <body>
+        <main>
+            <button onclick="notifyBackgroundPage()">Lancer l'analyse</button>
+        </main>
         <script src="popup_extension_firefox.js"></script>
     </body>
 </html>
